<resources>
    <string name="app_name">VolleyScoreKeeper</string>
    <string name="team_1">Team 1</string>
    <string name="score">Score</string>
    <string name="num_score">0</string>
    <string name="set">Set</string>
    <string name="num_set">0</string>
    <string name="team_2">Team 2</string>
    <string name="reset_score">Reset Score</string>
    <string name="reset_set">Reset Set</string>



</resources>
