<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1976D2"
        android:gravity="center_horizontal"
        >




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/volley2"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/team_1"
                android:textSize="20sp"
                android:textColor="#80D8FF"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:onClick="addOneForTeam1"
                android:text="@string/score"
                android:textColor="#80D8FF"/>

            <TextView
                android:id="@+id/team_1_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/num_score"
                android:textSize="25sp"
                android:textColor="#80D8FF"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#80D8FF"
                android:layout_margin="8dp"
                android:onClick="addSetForTeam1"
                android:text="@string/set" />

            <TextView
                android:id="@+id/team_1_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/num_set"
                android:textSize="20sp"
                android:textColor="#80D8FF"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/volley1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/team_2"
                android:textColor="#80D8FF"
                android:textSize="20sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:textColor="#80D8FF"
                android:onClick="addOneForTeam2"
                android:text="@string/score" />

            <TextView
                android:id="@+id/team_2_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/num_score"
                android:textColor="#80D8FF"
                android:textSize="25sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="addSetForTeam2"
                android:text="@string/set"
                android:textColor="#80D8FF"/>

            <TextView
                android:id="@+id/team_2_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/num_set"
                android:textColor="#80D8FF"
                android:textSize="20sp" />


        </LinearLayout>


    </LinearLayout>



    <Button
        android:id="@+id/reset_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/reset_score"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:onClick="resetScore"
        android:textColor="#80D8FF"/>

    <Button
        android:id="@+id/reset_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        android:layout_above="@id/reset_score"
        android:onClick="resetSet"
        android:text="@string/reset_set"
        android:textColor="#80D8FF"/>

</RelativeLayout>

</ScrollView>